# django-url-shortener

./: .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
src/: Dockerfile  requirements.txt
src/config/: celery.py  settings.py  urls.py
src/core/: settings.py  urls.py
src/shortener/: forms.py  services.py  urls.py  views.py
src/shortener/templates/shortener/: create_link_form.html
src/url_shortener/: models.py  tasks.py  views.py
src/url_shortener/migrations/: 0001_initial.py
url_shortener/: services.py  urls.py
url_shortener/templates/url_shortener/: create_link_form.html
